# petalo

./: .gitattributes  .gitconfig  .gitignore  Cargo.toml  README.md  flake.nix  justfile  mlem-config.toml  setup.py  shell.nix
.github/workflows/: test.yml
bindings/: Cargo.toml  README.md  bindings_test.py  crcs_from_images.py
bindings/src/: lib.rs
cffi/: Cargo.toml
cffi/src/: lib.rs  use.py
cmlem/: Cargo.toml  build.rs  wrapper.h
cmlem/src/: lib.rs
examples/: azip.rs  histogram.rs  polymorphic_float.rs  uom.rs
geometry/: Cargo.toml
geometry/src/: cylinder.rs  lib.rs  mix.rs  point.rs  units.rs  uom.rs  vector.rs
julia/Petalo/: Manifest.toml  Project.toml
julia/Petalo/src/: Petalo.jl  testme.jl
mlem/: Cargo.toml
mlem/src/: lib.rs  use.py
nix/: sources.nix
nix/home-manager/: README.md  bootstrap-home-manager  install-home-manager-and-maybe-spacemacs.sh  sources.nix  spacemacs
nix/home-manager/nixpkgs/: home.nix
notebooks/: utils.py  view_reconstructed.ipynb  viewraw.py
parameter-files/: one  template  two
python/: add_raw_header.py  jaszczak_foms.py  nema3_analysis.py  nema7foms.py  numpy_available_test.py  synchronize.py  synchronize_test.py  true_scatter_fraction.py  utils.py  viewdbscan.py  viewraw.py  xenon_thickness_from_h5.py
share-images/: README.md
simset/: Cargo.toml
simset-history/: Cargo.toml
simset-history/parameter-files/: template
simset/src/: custom.rs  lib.rs  standard.rs
src/: config.rs  discrete.rs  exports.rs  fom.rs  foms.py  fov.rs  gauss.rs  image.rs  index.rs  io.rs  jaszczak_foms.py  lib.rs  lor.rs  lorogram.rs  main.rs  mix.rs  mlem.rs  ncollide.rs  nema3_analysis.py  nema7foms.py  numpy_available_test.py  projector.rs  sensors.rs  synchronize.py  synchronize_test.py  system_matrix.rs  true_scatter_fraction.py  types.rs  utils.py  utils.rs  viewdbscan.py  viewraw.py  visualize.rs  weights.rs  xenon_thickness_from_h5.py
src/config/: mlem.rs
src/io/: hdf5.rs  mcead_test.h5  mcreaders.rs  mod.rs  raw.rs  test.h5
src/io/hdf5/: mc.rs  sensors.rs
src/lorogram/: axis.rs  build_scattergram.rs  mod.rs  old.rs
src/projector/: mod.rs  siddon.rs
src/projectors/: mod.rs  siddon.rs
src/sensors/: lorreconstruction.rs
src/sinogram/: axis.rs  mod.rs
src/system_matrix/: mod.rs  siddon.rs
test-data/: mlem-config.toml
tests/: gaussians.rs
tex/: continuous-mlem.tex  structure.tex
try-cpython/: Cargo.toml
try-cpython/src/: main.rs
units/: Cargo.toml
units/src/: lib.rs  todo.rs
