[workspace]
# members = ["mlem", "bindings"]
members = ["geometry", "bindings", "units"]

[package]
name = "petalo"
version = "0.1.0"
authors = ["Jacek Generowicz <jacg@my-post-office.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
geometry = { path = "geometry" }
units = { path = "units" }
structopt = "0.3"
ndarray = { version = "0.15.4", features = ["rayon"] }
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
parry3d = "0.8.0"
nalgebra = "0.30.1"
ncollide3d = "0.32"
kiss3d = "0.32"
num-traits = "0.2.15"
hdf5 = "0.8.1"
uom = "0.33.0"
ordered-float = "3.0"
float_eq = "1.0.0"
indicatif = "0.16.2"
itertools = "0.10.3"
binwrite = "0.2.1"
binrw = "0.8.4"
linfa = "0.5.0"
linfa-clustering = "0.5.1"
numsep = "0.1.12"
ndhistogram = "0.8.0"
toml = "0.5.9"

[dev-dependencies]
rstest = "0.13"
pretty_assertions = "1.2.1"
proptest = "1.0.0"
tempfile = "3.3.0"
rand_isaac = "0.3.0"
ndarray-rand = "0.14.0"
rand_core = "0.6.3"

[build-dependencies]
bindgen = "0.59.2"

[features]
compile-error = []

[profile.test]
opt-level = 3
