[workspace]
members = ["geometry", "bindings", "units", "simset"]

[package]
name = "petalo"
version = "0.1.0"
authors = ["Jacek Generowicz <jacg@my-post-office.net>"]
edition = "2021"
include = ["src/**/*", "README.md", "!**/*_test.*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
geometry = { path = "geometry" }
units = { path = "units" }
simset = { path = "simset" }
ndarray = { version = "0.15.6", features = ["rayon"] }
rayon = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
parry3d = "0.13.5"
nalgebra = "0.32.2"
ncollide3d = "0.33.0"
kiss3d = "0.35"
num-traits = "0.2.17"
hdf5 = "0.8.1"
uom = "0.34.0"
ordered-float = "4.2"
float_eq = "1.0.1"
indicatif = "0.17.7"
itertools = "0.12.0"
binrw = "0.13.3"
linfa = "0.5.0"
linfa-clustering = "0.5.1"
numsep = "0.1.12"
ndhistogram = "0.9.0"
toml = "0.5.9"
rand_distr = "0.4.3"
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
rstest = "0.16"
pretty_assertions = "1.3.0"
proptest = "1.2.0"
tempfile = "3.6.0"
rand_isaac = "0.3.0"
ndarray-rand = "0.14.0"
rand_core = "0.6.4"

[build-dependencies]
bindgen = "0.65.1"

[features]
compile-error = []

[profile.test]
opt-level = 3
