[package]
name = "bindings"
version = "0.1.0"
authors = ["Jacek Generowicz <jacg@my-post-office.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fulano"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
