[package]
name = "geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
units = { path = "../units" }
ncollide3d = "0.33.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
rstest = "0.17.0"
proptest = "1.4.0"
